In the hls_mask_ma, updated the mask using union instead of intersect.

--- a/HLS_cloudmask.ipynb
+++ b/HLS_cloudmask.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f3720827",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "03f62abf",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "00f0d826",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "16c35d2d",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "05837b11",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "f37f5efe",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "8666edce",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
    ],
    "source": [
     "def hls_mask_ma(ma_arr, mask_list=['cloud', 'adj_cloud', 'cloud shadow', 'snowice', 'water', 'aerosol_high']):\n",
-    "    # This function takes the masked QA array as input and exports the intersect mask image array. \n",
+    "    # This function takes the masked QA array as input and exports the union mask image array. \n",
     "    # The mask_list assigns the QA conditions you would like to mask.\n",
     "    # The default mask_list setting is coded for a vegetation application, so it also removes water and snow/ice.\n",
     "    # Please make sure the ma_arr is integer data type as the \"bitwise_and\" only works for integer and bool.\n",
@@ -299,7 +299,7 @@
     "            msk += (arr & (1 << QA_BIT['aerosol_h']) & (0 << QA_BIT['aerosol_l']))\n",
     "        if m == 'aerosol_low':\n",
     "            msk += (arr & (0 << QA_BIT['aerosol_h']) & (1 << QA_BIT['aerosol_l']))\n",
-    "    ma_arr.mask *= msk > 0\n",
+    "    ma_arr.mask += msk > 0\n",
     "    return ma_arr\n",
     "\n",
     "from matplotlib import pyplot\n",
@@ -310,15 +310,15 @@
     "pyplot.imshow(src.read(1))\n",
     "pyplot.show()\n",
     "\n",
-    "ma_arr = np.ma.masked_array(src.read(1), mask=np.ones_like(src.read(1)))\n",
+    "ma_arr = np.ma.masked_array(src.read(1), mask=np.zeros_like(src.read(1)))\n",
     "arr_mask = hls_mask_ma(ma_arr)\n",
     "print(ma_arr)\n",
     "out_path = os.path.join(os.path.dirname(fmask_img), 'cloud_mask_ma2.tif')\n",
     "save_img_band(arr_mask.mask, out_path, rio.uint8, get_img_profile(fmask_img))\n",
-    "src = rio.open(out_path)\n",
-    "print('Cloud mask')\n",
-    "pyplot.imshow(src.read(1))\n",
-    "pyplot.show()"
+    "with rio.open(out_path) as src:\n",
+    "    print('Cloud mask')\n",
+    "    pyplot.imshow(src.read(1))\n",
+    "    pyplot.show()"
    ]
   }
  ],
